Add REST API for moving issues
Fixes #37352
